kube-derive/tests/ui/schema_mode_invalid.stderr
error: Unknown value: `Disabled`. Did you mean `disabled`?
 --> tests/ui/schema_mode_invalid.rs:7:70
  |
7 | #[kube(group = "example.org", version = "v1", kind = "Foo", schema = "Disabled")]
  |                                                                      ^^^^^^^^^^
